syntax = "proto3";

option go_package = "proto/";

package configschema;

import "google/protobuf/timestamp.proto";

service ConfigSchemaService {
  rpc SaveConfigSchema(SaveConfigSchemaRequest) returns (SaveConfigSchemaResponse);
  rpc GetConfigSchema(GetConfigSchemaRequest) returns (GetConfigSchemaResponse);
  rpc DeleteConfigSchema(DeleteConfigSchemaRequest) returns (DeleteConfigSchemaResponse);
  rpc ValidateConfiguration(ValidateConfigurationRequest) returns (ValidateConfigurationResponse);
  rpc GetConfigSchemaVersions(ConfigSchemaVersionsRequest) returns (ConfigSchemaVersionsResponse);
}

message ConfigSchemaDetails {
  string schema_name = 1;
  string version = 2;
  string organization = 3;
  string namespace = 4;
}

message ConfigSchemaData {
  string schema = 1;
  google.protobuf.Timestamp creation_time = 2;
}

message ConfigSchema {
  ConfigSchemaDetails schema_details = 1;
  ConfigSchemaData schema_data = 2;
}

message SaveConfigSchemaRequest {
  ConfigSchemaDetails schema_details = 1;
  string schema = 2;
}

message SaveConfigSchemaResponse {
  int32 status = 1;
  string message = 2;
}

message DeleteConfigSchemaRequest { 
  ConfigSchemaDetails schema_details = 1;
}

message DeleteConfigSchemaResponse {
  int32 status = 1;
  string message = 2;
}

message GetConfigSchemaRequest {
  ConfigSchemaDetails schema_details = 1;
}

message GetConfigSchemaResponse  {
  int32 status = 1;
  string message = 2;
  ConfigSchemaData schema_data = 3;
}

message ValidateConfigurationRequest {
  ConfigSchemaDetails schema_details  = 1;
  string configuration = 2;
}

message ValidateConfigurationResponse {
  int32 status = 1;
  string message = 2;
  bool is_valid = 3;
}

message ConfigSchemaVersionsRequest {
  ConfigSchemaDetails schema_details = 1;
}

message ConfigSchemaVersionsResponse {
  int32 status = 1;
  string message = 2;
  repeated ConfigSchema schema_versions = 3;
}